--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         document.getElementById("geolocation").innerText = `Geolocation ${navigator.geolocation}`;
         return;
       }
-      const currentPosition = await navigator.geolocation.currentPosition();
+      const currentPosition = await navigator.geolocation.getCurrentPosition();
       document.getElementById("geolocation").innerText = ```
         latitude: ${currentPosition.coords.latitude}<br>
         longitude: ${currentPosition.coords.longitude}<br>
