--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <title>UofTHacks X</title>
+<link rel="stylesheet" href="style.css" />
 <style>
   * {
     box-sizing: border-box;
@@ -128,7 +129,7 @@
 
         <div id="clock-pages">
           <div id="clock-container">
-            <canvas id="clock-canvas"></canvas>
+            <canvas id="canvas" style="background-color: #333"> </canvas>
           </div>
 
           <div id="pages-without-clock">
@@ -166,6 +167,7 @@
   </div>
 
   <script src="index.js"></script>
+  <script src="clock.js"></script>
 </body>
 
 </html>
