--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <div id="clock-pages">
           <div id="clock-container">
-            <canvas id="canvas" style="background-color: #333"> </canvas>
+            <canvas id="canvas"> </canvas>
           </div>
 
           <div id="pages-without-clock">
