--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       --accent-color-lighter: #9B209B;
       --accent-color-darker: #7B007B;
       --accent-color-disabled: #776677;
+      --text-padding: 8vw;
     }
 
     html {
@@ -83,7 +84,7 @@
     }
 
     #splash-page-texts {
-      padding: 8vw;
+      padding: var(--text-padding);
       font-size: 9vw;
       display: flex;
       flex-direction: column;
@@ -170,8 +171,13 @@
       display: none;
     }
 
+    #introduction-page {
+      padding: var(--text-padding);
+      font-size: 7vw;
+    }
+
     .rainbow-text {
-      background-image: linear-gradient(45deg, rgb(255, 188, 255), rgb(199, 187, 255), rgb(204, 245, 251), rgb(255, 215, 187));
+      background-image: linear-gradient(45deg, rgb(253, 191, 253), rgb(183, 180, 241), rgb(154, 210, 219), rgb(239, 196, 165));
       color: transparent;
       background-clip: text;
       -webkit-background-clip: text;
@@ -188,13 +194,13 @@
         <p>Follow this guide to find out!</p>
       </div>
       <div class="navigation-buttons">
-        <div class="accented-button" onclick="goToPageWithID('introduction-page')">Start</div>
+        <div id="splash-start-button" class="accented-button" onclick="onSplashStartButtonClicked()">Start</div>
       </div>
     </div>
 
     <div id="main-pages">
       <div id="pages-without-navigation-buttons">
-        <div id="introduction-page">
+        <div id="introduction-page" class="rainbow-text">
           <p>If you are lost in a wild area, do you know that an analog clock can help you find out the directions?
           </p>
           <p>If you heard about this before, did you ever doubt how accurate this method is?</p>
