--- a/index.html
+++ b/index.html
@@ -258,8 +258,10 @@
     </div>
   </div>
 
+  <script src="suncalc.js"></script>
   <script src="index.js"></script>
   <script src="clock.js"></script>
+  <script src="direction.js"></script>
 </body>
 
 </html>
